--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 sudo: required
 
 env:
+  global:
+    - DOCKER_VERSION: "1.10.1-0~trusty"
+    - DOCKER_COMPOSE_VERSION: "1.6.0"
   matrix:
     - TEST_DIR: "flask"
 
@@ -9,18 +12,14 @@ services:
   - docker
 
 before_install:
-  # Upgrade Docker to a newer version.
-  - sudo sh -c 'echo "deb https://apt.dockerproject.org/repo ubuntu-precise main" > /etc/apt/sources.list.d/docker.list'
-  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
-  - sudo apt-get update
-  - sudo apt-key update
-  - sudo apt-get -qqy -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" install docker-engine=1.11.1-0~precise
+  # Upgrade docker and docker-compose.
+  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
   - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/1.7.0/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - docker-compose -v
   - docker -v
+  - docker-compose -v
 
 before_script:
   - cd $TEST_DIR
