Fixes #2: Remove redundant data container.

--- a/flask/docker-compose.yml
+++ b/flask/docker-compose.yml
@@ -12,11 +12,7 @@ services:
 
   db:
     build: db/.
-    volumes_from:
-      - dbdata
+    volumes:
+      - /var/lib/mysql
     environment:
        MYSQL_ROOT_PASSWORD: supersecure
-
-  dbdata:
-    build: data/.
-    hostname: mysqldata
